<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/image"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_image"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp" />

    <TextView
        android:id="@+id/forget_password_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="23dp"
        android:text="@string/forget_password"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget_password_link"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="19dp"
        android:background="@drawable/button_common"
        android:padding="4dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/need_new_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="23dp"
        android:text="@string/need_new_account"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_using"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/need_new_account_link"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:text="@string/or_login_using_your"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/phone_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_using"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="19dp"
        android:background="@drawable/button_common"
        android:drawableStart="@drawable/phone"
        android:padding="4dp"
        android:text="@string/phone"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="14sp" />


</RelativeLayout>