<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".PhoneLoginActivity">

    <ImageView
        android:id="@+id/phone_login_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_login_image"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/phone"
        android:hint="@string/write_phone"
        android:padding="15dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/verification_code_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number_input"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:hint="@string/write_verification_code"
        android:padding="5dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="invisible" />


    <Button
        android:id="@+id/send_ver_code_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verification_code_input"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/button_common"
        android:text="@string/send_verification_code"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_ver_code_button"
        android:layout_marginStart="17dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/button_common"
        android:text="@string/verify"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>