<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".GroupSettingsActivity">

    <include
        android:id="@+id/settings_toolbar"
        layout="@layout/bar_app_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/set_chat_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/group_icon" />

            <EditText
                android:id="@+id/set_chat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_chat_name"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/password"
                android:hint="@string/chat_password_settings"
                android:inputType="textMultiLine"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/set_chat_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="105dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/edit_name"
                android:hint="@string/group_name"
                android:inputType="textMultiLine"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/set_chat_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_chat_password"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/edit_status"
                android:hint="@string/chat_description"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <Button
                android:id="@+id/update_settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_chat_description"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_common"
                android:inputType="textMultiLine"
                android:padding="6dp"
                android:text="@string/save"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/in_search"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_delete"
                android:inputType="textMultiLine"
                android:padding="6dp"
                android:text="@string/delete_group"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/in_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/update_settings_button"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_common"
                android:padding="6dp"
                android:text="@string/in_search_of_players"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:checked="false" />

            <TextView
                android:id="@+id/members_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delete_button"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/members"
                android:textColor="@color/colorPrimary"
                android:textSize="24dp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/members_text"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/characters_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recycler_members"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/characters"
                android:textColor="@color/colorPrimary"
                android:textSize="24dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_character_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recycler_characters"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:background="@drawable/button_common"
                android:inputType="textMultiLine"
                android:padding="6dp"
                android:text="New character"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_characters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/characters_text"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>