<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".CharacterActivity">

    <include
        android:id="@+id/character_toolbar"
        layout="@layout/bar_app_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/character_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/name_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="10dp"
                    android:layout_toLeftOf="@id/xp_layout">

                    <TextView
                        android:id="@+id/name_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:text="@string/character_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@id/name_view"
                        android:background="@drawable/inputs"
                        android:maxLines="1"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="22sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name_layout"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="10dp"
                    android:layout_toLeftOf="@id/xp_layout">

                    <TextView
                        android:id="@+id/owner_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:text="@string/owner"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/owner_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@id/owner_view"
                        android:background="@drawable/inputs"
                        android:maxLines="1"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="22sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/xp_layout"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/level_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/level"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <EditText
                        android:id="@+id/level_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/level_view"
                        android:layout_centerHorizontal="true"
                        android:layout_marginHorizontal="12dp"
                        android:background="@drawable/inputs"
                        android:maxLines="1"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="5dp"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_common"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/character_button"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_recycler"
                android:text="@string/character"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/character_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/features_button"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_recycler"
                android:text="@string/features"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/features_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/skills_button"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_recycler"
                android:text="@string/skills"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/minor_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_delete"
                android:text="@string/delete_character"
                android:textColor="@android:color/white"

                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>